# procc

./: .gitignore  CMakeLists.txt  README.md
doc/: doc.txt  mybashrc
include/: Test.h  variable.h
src/: Basic_Grammar.cpp  CMakeLists.txt  Makefile  constant.cpp  data_type.cpp  exegesis.cpp  main.cpp  variable_scope.cpp  variable_type.cpp
